--- a/src/index.scss
+++ b/src/index.scss
@@ -15,18 +15,29 @@
     -webkit-text-size-adjust: 100%;
 }
 
-* {
+*,
+*::before,
+*::after {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+}
+
+img,
+picture,
+svg,
+video {
+    max-width: 100%;
+    height: auto;
+    display: block;
 }
 
 body {
     margin: 0;
     display: flex;
     place-items: center;
-    min-width: 320px;
-    min-height: 100vh;
+    width: 100%;
+    height: auto;
 }
 
 button {
@@ -42,8 +53,6 @@ button {
 }
 
 #root {
-    height: 100vh;
-    width: 100vw;
-    overflow-y: hidden;
-    overflow-x: hidden;
+    height: 100%;
+    width: 100%;
 }
